logs/dag_id=dag_sql/run_id=scheduled__2023-03-08T173000+0000/task_id=insere_dados_tb_data_engineering/attempt=2.log
[2023-03-08T19:46:32.394+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_sql.insere_dados_tb_data_engineering scheduled__2023-03-08T17:30:00+00:00 [queued]>
[2023-03-08T19:46:32.406+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_sql.insere_dados_tb_data_engineering scheduled__2023-03-08T17:30:00+00:00 [queued]>
[2023-03-08T19:46:32.407+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-03-08T19:46:32.408+0000] {taskinstance.py:1280} INFO - Starting attempt 2 of 2
[2023-03-08T19:46:32.408+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-03-08T19:46:32.425+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): insere_dados_tb_data_engineering> on 2023-03-08 17:30:00+00:00
[2023-03-08T19:46:32.430+0000] {standard_task_runner.py:55} INFO - Started process 8246 to run task
[2023-03-08T19:46:32.434+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_sql', 'insere_dados_tb_data_engineering', 'scheduled__2023-03-08T17:30:00+00:00', '--job-id', '95', '--raw', '--subdir', 'DAGS_FOLDER/dag_sql.py', '--cfg-path', '/tmp/tmpikjx4yt3']
[2023-03-08T19:46:32.435+0000] {standard_task_runner.py:83} INFO - Job 95: Subtask insere_dados_tb_data_engineering
[2023-03-08T19:46:32.510+0000] {task_command.py:388} INFO - Running <TaskInstance: dag_sql.insere_dados_tb_data_engineering scheduled__2023-03-08T17:30:00+00:00 [running]> on host 214d78e4ce30
[2023-03-08T19:46:32.682+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag_sql
AIRFLOW_CTX_TASK_ID=insere_dados_tb_data_engineering
AIRFLOW_CTX_EXECUTION_DATE=2023-03-08T17:30:00+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-03-08T17:30:00+00:00
[2023-03-08T19:46:32.683+0000] {sql.py:254} INFO - Executing: insert into tb_data_engineering(name,cargo,nivel,dt)
values('Junior Lafuente', 'DATA ENGINERIING', 'PLENO' CURRENT_DATE),
      ('Guilherme Delmondes', 'DATA ENGINERIING', 'SPEC' CURRENT_DATE),
      ('Bruno Rodrigues', 'DATA ENGINERIING', 'SENIOR' CURRENT_DATE),
      ('Rafael Miranda', 'DATA ENGINERIING', 'SPEC' CURRENT_DATE),
      ('Diogo brido nilo', 'DATA ENGINERIING', 'PLENO' CURRENT_DATE);
        
[2023-03-08T19:46:32.696+0000] {base.py:73} INFO - Using connection ID 'postgres-***' for task execution.
[2023-03-08T19:46:33.019+0000] {base.py:73} INFO - Using connection ID 'postgres-***' for task execution.
[2023-03-08T19:46:33.046+0000] {sql.py:375} INFO - Running statement: insert into tb_data_engineering(name,cargo,nivel,dt)
values('Junior Lafuente', 'DATA ENGINERIING', 'PLENO' CURRENT_DATE),
      ('Guilherme Delmondes', 'DATA ENGINERIING', 'SPEC' CURRENT_DATE),
      ('Bruno Rodrigues', 'DATA ENGINERIING', 'SENIOR' CURRENT_DATE),
      ('Rafael Miranda', 'DATA ENGINERIING', 'SPEC' CURRENT_DATE),
      ('Diogo brido nilo', 'DATA ENGINERIING', 'PLENO' CURRENT_DATE);
        , parameters: None
[2023-03-08T19:46:33.078+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CURRENT_DATE"
LINE 2: ...es('Junior Lafuente', 'DATA ENGINERIING', 'PLENO' CURRENT_DA...
                                                             ^

[2023-03-08T19:46:33.090+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=dag_sql, task_id=insere_dados_tb_data_engineering, execution_date=20230308T173000, start_date=20230308T194632, end_date=20230308T194633
[2023-03-08T19:46:33.106+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 95 for task insere_dados_tb_data_engineering (syntax error at or near "CURRENT_DATE"
LINE 2: ...es('Junior Lafuente', 'DATA ENGINERIING', 'PLENO' CURRENT_DA...
                                                             ^
; 8246)
[2023-03-08T19:46:33.127+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-03-08T19:46:33.146+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
